--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
   <p>Jupyter Notebook documents allow users to combine live code, equations, visualizations, and explanatory text in a single interactive document. It supports various programming languages through kernels, allowing users to work with languages such as Python, R, Julia, and others within the same interface.</p>
   <p>For detailed documentation on Jupyter, please visit the <a href="https://jupyter.org/documentation" target="_blank" rel="noopener noreferrer">Jupyter Documentation</a>.</p>
 
-  <a href="Bond.zip" class="download-btn" download>Anaconda & Jupyter Documentation</a>
+  <a href="Bond.zip" class="download-btn" download>Anaconda & Bond Documentation</a>
+  <a href="CL III.pdf" class="download-btn" download> Write-Script & Jupyter Documentation</a>
 
 </div>
 </body>
