--- a/index.html
+++ b/index.html
@@ -129,11 +129,14 @@
 
   <a href="Bond.zip" class="download-btn" download>Anaconda & Bond Documentation</a>
   <a href="CL III.pdf" class="download-btn" download> Write-Script & Jupyter Documentation</a>
+</br>
+</br>
+</br>
 
 <!-- Image container with heart overlays -->
   <div class="image-container">
     <div class="heart"></div>
-    <img src="https://media.licdn.com/dms/image/D4D03AQGdIbLS80kAQA/profile-displayphoto-shrink_800_800/0/1694715067631?e=1719446400&v=beta&t=TQKGmH3fJgUsX0Oe8FGNvBGwZedipyMkt1x8HKhF3zg" alt="Image 1">
+    <img src="sh.png" alt="Image 1">
     <div class="heart-overlay"></div>
   </div>
   <div class="image-container" style="margin-top: 20px;">
@@ -142,7 +145,9 @@
     <div class="heart-overlay"></div>
   </div>
   
-
+</br>
+</br>
+</br>
 </div>
 </body>
 </html>
