--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 50%;
-    z-index: 0;}
+    z-index: 0;
+  }
 </style>
 </head>
 <body>
