--- a/index.html
+++ b/index.html
@@ -55,62 +55,36 @@
     background-color: #0056b3;
   }
   
-  .heart {
-    position: absolute;
-    top: -40px;
-    left: calc(50% - 50px);
-    width: 100px;
-    height: 90px;
-    background-color: #f00;
-    transform: rotate(-45deg);
-    border-radius: 50px 50px 0 0;
-  }
-
-  .heart::before,
-  .heart::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 100px;
-    height: 100px;
-    background-color: #f00;
-    border-radius: 50%;
-  }
-
-  .heart::before {
-    left: -50px;
-  }
-
-  .heart::after {
-    left: 50px;
-  }
-
-  .image-container {
+  .heart-collage {
+    width: 300px;
+    height: 260px;
     position: relative;
-    text-align: center;
-    margin-top: 50px;
+    margin: 50px auto;
   }
 
-  .image-container img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-  }
-
-  .image-container .heart-overlay {
+  .heart-collage img {
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
+    object-fit: cover;
+    border-radius: 50%;
+    clip-path: polygon(
+      50% 100%, 
+      100% 0, 
+      0 0
+    );
+  }
+
+  .heart-overlay {
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 50%;
-    z-index: 0;
   }
 </style>
 </head>
@@ -135,13 +109,8 @@
 </br>
 
 <!-- Image container with heart overlays -->
-  <div class="image-container">
-    <div class="heart"></div>
+ <div class="heart-collage">
     <img src="sh.png" alt="Image 1">
-    <div class="heart-overlay"></div>
-  </div>
-  <div class="image-container" style="margin-top: 20px;">
-    <div class="heart"></div>
     <img src="div.jpg" alt="Image 2">
     <div class="heart-overlay"></div>
   </div>
