--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <p>For detailed documentation on Jupyter, please visit the <a href="https://jupyter.org/documentation" target="_blank" rel="noopener noreferrer">Jupyter Documentation</a>.</p>
 
   <a href="CL IV (2).zip" class="download-btn" download>Anaconda & Bond Documentation</a>
+  <a href="DL2-New (1).ipynb" class="download-btn" download>2nd Documentation</a>
   <a href="CL IV WRITE.zip" class="download-btn" download> Write-Script & Jupyter Documentation</a>
 </div>
 </body>
